deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jwtserver-application
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jwtserver-application
    spec:
      containers:
      - name: master
        image: andreassolberg/jwtserver:latest  # or just image: redishello:1.0
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jwtserver-application
  labels:
    app: jwtserver-application
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: jwtserver-application
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jwtserver-ntnu
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jwtserver-ntnu
    spec:
      containers:
      - name: master
        image: andreassolberg/jwtserver:latest
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jwtserver-ntnu
  labels:
    app: jwtserver-ntnu
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: jwtserver-ntnu
